# AgentOS

./: .gitignore  README.md  pyproject.toml
Reports/: Literatur Review Report - Agent OS.docx  Literature Review Agent OS.docx  Literature Review Final Draft.docx  REPORTS_SUMMARY.md
docs/: README.md  architecture.md  roadmap.md
scripts/: README.md
src/agentos/: __init__.py
src/agentos/agents/: __init__.py  base.py
src/agentos/config/: settings.py
src/agentos/kernel/: __init__.py  router.py  scheduler.py
src/agentos/mcp/: __init__.py  registry.py
src/agentos/memory/: __init__.py  base.py
src/agentos/observability/: __init__.py  logger.py
src/agentos/safety/: policy.py
src/agentos/tools/: __init__.py  base.py  filesystem.py  http_client.py
