[project]
name = "agentos"
version = "0.1.0"
description = "MCP-native OS-style runtime for multi-agent LLM workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
